--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                        <div class="items-morephones__icon">
                                           <picture>
                                              <source srcset="img/vodafon-phone-icon.svg" type="image/webp"><img
-                                                src="img/vodafon-phone-icon.svg" alt="">
+                                                src="img/vodafon-phone-icon.svg" alt="#">
                                           </picture>
                                        </div>
                                        <a class="items-morephones__link" href="tel:+380994455418">(099) 445-54-18</a>
@@ -92,7 +92,7 @@
                                        <div class="items-morephones__icon">
                                           <picture>
                                              <source srcset="img/kievstar-phone-icon.svg" type="image/webp"><img
-                                                src="img/kievstar-phone-icon.svg" alt="">
+                                                src="img/kievstar-phone-icon.svg" alt="#">
                                           </picture>
                                        </div>
                                        <a class="items-morephones__link" href="tel:+3800964977803">(096) 497-78-03</a>
@@ -118,8 +118,8 @@
                         <picture>
                            <source srcset="img/shopping-cart-icon.svg" type="image/webp"><img
                               src="img/shopping-cart-icon.svg" class="shopping__cart">
-                        </picture></img>
-                        <div id="cart-counter" class="shopping__cart-counter">34</div>
+                        </picture>
+                        <div id="cart-counter" class="shopping__cart-counter">3</div>
                      </a>
                   </div>
 
@@ -229,8 +229,8 @@
                      <a href="#" class="navbar__shopping shopping">
                         <picture>
                            <source srcset="img/shopping-cart-icon.svg" type="image/webp"><img
-                              src="img/shopping-cart-icon.svg" class="shopping__cart">
-                        </picture></img>
+                              src="img/shopping-cart-icon.svg" class="shopping__cart" alt="#">
+                        </picture>
                         <div id="cart-counter" class="shopping__cart-counter">34</div>
                      </a>
 
@@ -494,7 +494,7 @@
                                  <div class="items-morephones__icon">
                                     <picture>
                                        <source srcset="img/vodafon-phone-icon.svg" type="image/webp"><img
-                                          src="img/vodafon-phone-icon.svg" alt="">
+                                          src="img/vodafon-phone-icon.svg" alt="#">
                                     </picture>
                                  </div>
                                  <a class="items-morephones__link" href="tel:+380994455418">(099) 445-54-18</a>
@@ -504,7 +504,7 @@
                                  <div class="items-morephones__icon">
                                     <picture>
                                        <source srcset="img/kievstar-phone-icon.svg" type="image/webp"><img
-                                          src="img/kievstar-phone-icon.svg" alt="">
+                                          src="img/kievstar-phone-icon.svg" alt="#">
                                     </picture>
                                  </div>
                                  <a class="items-morephones__link" href="tel:+3800964977803">(096) 497-78-03</a>
@@ -514,7 +514,7 @@
                                  <div class="items-morephones__icon">
                                     <picture>
                                        <source srcset="img/life-phone-icon.svg" type="image/webp"><img
-                                          src="img/life-phone-icon.svg" alt="">
+                                          src="img/life-phone-icon.svg" alt="#">
                                     </picture>
                                  </div>
                                  <a class="items-morephones__link" href="tel:+380634351681">(063) 435-16-81</a>
