--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
    <meta charset="UTF-8">
@@ -116,10 +116,10 @@
                      <!-- shopping-block -->
                      <a href="#" class="header__shopping shopping">
                         <picture>
-                           <source srcset="img/shopping-cart-icon.svg" type="image/webp"><img
-                              src="img/shopping-cart-icon.svg" class="shopping__cart">
+                           <source srcset="img/shopping-cart-icon.svg" type="image/webp">
+                           <img src="img/shopping-cart-icon.svg" class="shopping__cart" alt='#'>
                         </picture>
-                        <div id="cart-counter" class="shopping__cart-counter">3</div>
+                        <div id="cartcounter" class="shopping__cart-counter">3</div>
                      </a>
                   </div>
 
@@ -228,10 +228,10 @@
                      <!-- shopping cart -->
                      <a href="#" class="navbar__shopping shopping">
                         <picture>
-                           <source srcset="img/shopping-cart-icon.svg" type="image/webp"><img
-                              src="img/shopping-cart-icon.svg" class="shopping__cart" alt="#">
+                           <source srcset="img/shopping-cart-icon.svg" type="image/webp">
+                           <img src="img/shopping-cart-icon.svg" class="shopping__cart" alt="#">
                         </picture>
-                        <div id="cart-counter" class="shopping__cart-counter">34</div>
+                        <div id="cartcounter" class="shopping__cart-counter">3</div>
                      </a>
 
                   </nav>
